# powder_trickler

./: .gitignore  CMakeLists.txt  README
scripts/: install_dependencies.sh
src/desktop_app/: CMakeLists.txt  main.cpp  main.qml  run_screen_view.cpp  run_screen_view.h  settings_view.cpp
src/desktop_app/controller/: control_manager.cpp  control_manager.h  settings_manager.cpp
src/desktop_app/interfaces/: abstract_controller_interface.cpp  abstract_controller_interface.h  uart_interface.cpp  uart_interface.h
src/desktop_app/qml/: Run_screen.qml  Settings_tab.qml  main.qml  run_screen_view.cpp  settings_view.cpp  settings_view.h
src/desktop_app/settings/: settings_manager.cpp  settings_manager.h
src/idl/: CMakeLists.txt  idl.h
tests/desktop_app/: CMakeLists.txt  test_control_manager.cpp  test_settings_manager.cpp
